--- a/phiahr/package.json
+++ b/phiahr/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "serve": "^14.2.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -29,5 +30,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
-
 }
